@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <fileset-config file-format-version="1.2.0" simple-config="true">
     <local-check-config name="Priha checkstyle configuration" location="internal_config__1261654928515.xml" type="internal" description=""/>
-    <fileset name="all" enabled="true" check-config-name="Priha checkstyle configuration" local="true">
+    <fileset name="all" enabled="true" check-config-name="Janne's coding style" local="false">
         <file-match-pattern match-pattern="." include-pattern="true"/>
     </fileset>
     <filter name="FilesFromPackage" enabled="true">
