@@ -12,6 +12,8 @@ javax.jcr.tck.workspacename=testworkspace
 javax.jcr.tck.nodetype=nt:unstructured
 javax.jcr.tck.nodetypenochildren=nt:base
 
+javax.jcr.tck.versionableNodeType=nt:unstructured
+
 javax.jcr.tck.sameNameSibsTrueNodeType=nt:unstructured
 javax.jcr.tck.sameNameSibsFalseNodeType=test:sameNameSibsFalseChildNodeDefinition
 
